--- a/assets/redactor.css
+++ b/assets/redactor.css
@@ -12,6 +12,8 @@
     padding: 0 4px;
     background-color: #fafafa;
     border-bottom: 1px solid rgba(0, 0, 0, 0.075);
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.075) 1.19%, #fafafa 1.19%, #fafafa 50%, rgba(0, 0, 0, 0.075) 50%, rgba(0, 0, 0, 0.075) 51.19%, #fafafa 51.19%, #fafafa 100%);
+    background-size: 84px 84px;
 }
 
 .redactor-toolbar a {
