--- a/scss/_statusbar.scss
+++ b/scss/_statusbar.scss
@@ -1,20 +1,33 @@
-.redactor-statusbar {
-    background-color: #f8f8f8;
+@mixin _redactor-base-statusbar {
 
-    & li {
-        color: rgba(0, 0, 0, .5);
-        border-right-color: rgba(0, 0, 0, .1);
+    .redactor-statusbar {
+        background-color: #f8f8f8;
+
+        & li {
+            color: rgba(0, 0, 0, .5);
+            border-right-color: rgba(0, 0, 0, .1);
+        }
+
+        & li:last-child {
+            border-right-color: transparent;
+        }
+
+        & a {
+            color: rgba(0, 0, 0, .5);
+        }
+
+        & a:hover {
+            color: #f03c69;
+        }
     }
+}
 
-    & li:last-child {
-        border-right-color: transparent;
-    }
+body.rex-theme-dark {
+    @include _redactor-base-statusbar;
+}
 
-    & a {
-        color: rgba(0, 0, 0, .5);
-    }
-
-    & a:hover {
-        color: #f03c69;
+@media (prefers-color-scheme: dark) {
+    body.rex-has-theme:not(.rex-theme-light) {
+        @include _redactor-base-statusbar;
     }
 }
