--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -1,67 +1,80 @@
-.redactor-styles {
+@mixin _redactor-base-styles {
 
-    color: $color-text;
+    .redactor-styles {
 
-    a,
-    a:hover {
-        color: $color-link;
-    }
+        color: $color-text;
 
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-        color: $color-headings;
-    }
-
-    blockquote {
-        color: rgba(0, 0, 0, .5);
-    }
-
-    time, small, var, code, kbd, mark {
-        color: rgba($color-text, .9);
-    }
-
-    dfn,
-    abbr {
-        &[title] {
-            border-bottom-color: rgba(0, 0, 0, .5);
+        a,
+        a:hover {
+            color: $color-link;
         }
-    }
 
-    code {
-        background-color: $color-silver;
-    }
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            color: $color-headings;
+        }
 
-    mark {
-        background-color: $color-warning;
-    }
-
-    kbd {
-        border-color: $color-lightgray;
-    }
-
-    pre,
-    pre code {
-        background-color: $color-aluminum;
-        color: rgba($color-text, .85);
-    }
-
-    table {
-        caption {
+        blockquote {
             color: rgba(0, 0, 0, .5);
         }
 
-        th,
-        td {
-            border-color: #eee;
+        time, small, var, code, kbd, mark {
+            color: rgba($color-text, .9);
         }
 
-        tfoot th,
-        tfoot td {
-            color: rgba(0, 0, 0, .5);
+        dfn,
+        abbr {
+            &[title] {
+                border-bottom-color: rgba(0, 0, 0, .5);
+            }
         }
+
+        code {
+            background-color: $color-silver;
+        }
+
+        mark {
+            background-color: $color-warning;
+        }
+
+        kbd {
+            border-color: $color-lightgray;
+        }
+
+        pre,
+        pre code {
+            background-color: $color-aluminum;
+            color: rgba($color-text, .85);
+        }
+
+        table {
+            caption {
+                color: rgba(0, 0, 0, .5);
+            }
+
+            th,
+            td {
+                border-color: #eee;
+            }
+
+            tfoot th,
+            tfoot td {
+                color: rgba(0, 0, 0, .5);
+            }
+        }
+    }
+}
+
+body.rex-theme-dark {
+    @include _redactor-base-styles;
+}
+
+@media (prefers-color-scheme: dark) {
+    body.rex-has-theme:not(.rex-theme-light) {
+        @include _redactor-base-styles;
     }
 }
