--- a/scss/_upload.scss
+++ b/scss/_upload.scss
@@ -1,24 +1,37 @@
-.upload-redactor-box {
-    border-color: rgba(#007dff, .15);
-    background-color: #fff;
+@mixin _redactor-base-upload {
+
+    .upload-redactor-box {
+        border-color: rgba(#007dff, .15);
+        background-color: #fff;
+    }
+
+    .upload-redactor-placeholder {
+        color: rgba(0, 0, 0, .3);
+    }
+
+    .upload-redactor-hover {
+        background-color: rgba(#007dff, .075);
+    }
+
+    .upload-redactor-error {
+        background-color: rgba(#ff3265, .075);
+    }
+
+    .upload-redactor-box-hover {
+        outline-color: rgba(#007dff, .3);
+    }
+
+    .upload-redactor-box-error {
+        outline-color: rgba(#ff3265, .3);
+    }
 }
 
-.upload-redactor-placeholder {
-    color: rgba(0, 0, 0, .3);
+body.rex-theme-dark {
+    @include _redactor-base-upload;
 }
 
-.upload-redactor-hover {
-    background-color: rgba(#007dff, .075);
-}
-
-.upload-redactor-error {
-    background-color: rgba(#ff3265, .075);
-}
-
-.upload-redactor-box-hover {
-    outline-color: rgba(#007dff, .3);
-}
-
-.upload-redactor-box-error {
-    outline-color: rgba(#ff3265, .3);
+@media (prefers-color-scheme: dark) {
+    body.rex-has-theme:not(.rex-theme-light) {
+        @include _redactor-base-upload;
+    }
 }
