--- a/scss/_progress.scss
+++ b/scss/_progress.scss
@@ -1,10 +1,23 @@
-@mixin striped-redactor($color: rgba(255, 255, 255, .2), $angle: 45deg) {
-    background-image: -webkit-linear-gradient($angle, $color 25%, transparent 25%, transparent 50%, $color 50%, $color 75%, transparent 75%, transparent);
-    background-image: -o-linear-gradient($angle, $color 25%, transparent 25%, transparent 50%, $color 50%, $color 75%, transparent 75%, transparent);
-    background-image: linear-gradient($angle, $color 25%, transparent 25%, transparent 50%, $color 50%, $color 75%, transparent 75%, transparent);
+@mixin _redactor-base-progress {
+
+    @mixin striped-redactor($color: rgba(255, 255, 255, .2), $angle: 45deg) {
+        background-image: -webkit-linear-gradient($angle, $color 25%, transparent 25%, transparent 50%, $color 50%, $color 75%, transparent 75%, transparent);
+        background-image: -o-linear-gradient($angle, $color 25%, transparent 25%, transparent 50%, $color 50%, $color 75%, transparent 75%, transparent);
+        background-image: linear-gradient($angle, $color 25%, transparent 25%, transparent 50%, $color 50%, $color 75%, transparent 75%, transparent);
+    }
+
+    #redactor-progress span {
+        @include striped-redactor;
+        background-color: #007dff;
+    }
 }
 
-#redactor-progress span {
-    @include striped-redactor;
-    background-color: #007dff;
+body.rex-theme-dark {
+    @include _redactor-base-progress;
+}
+
+@media (prefers-color-scheme: dark) {
+    body.rex-has-theme:not(.rex-theme-light) {
+        @include _redactor-base-progress;
+    }
 }
