--- a/scss/_redaxo.scss
+++ b/scss/_redaxo.scss
@@ -1,52 +1,65 @@
-.redactor-styles {
-    font-family: inherit;
-    line-height: inherit;
+@mixin _redactor-base-redaxo {
+
+    .redactor-styles {
+        font-family: inherit;
+        line-height: inherit;
+    }
+
+    .redactor-box.redactor-styles-on .redactor-toolbar {
+        display: flex !important;
+        align-items: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+        flex-grow: 1;
+        padding: 0 4px;
+        background-color: #fafafa;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.075);
+        background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.075) 1.19%, #fafafa 1.19%, #fafafa 50%, rgba(0, 0, 0, 0.075) 50%, rgba(0, 0, 0, 0.075) 51.19%, #fafafa 51.19%, #fafafa 100%);
+        background-size: 84px 84px;
+    }
+
+    .redactor-toolbar a {
+        margin: 0 4px 0 0;
+        background-color: transparent;
+        box-shadow: none;
+    }
+
+    .redactor-toolbar a.re-button {
+        margin-top: 4px;
+        margin-bottom: 4px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .redactor-toolbar a.re-button.re-separator {
+        display: inline-block;
+        align-self: stretch;
+        width: 1px;
+        min-width: 1px;
+        margin-top: 0;
+        margin-bottom: 0;
+        padding: 0;
+        background-color: rgba(0, 0, 0, 0.075);
+        opacity: 1;
+    }
+
+    .redactor-air a.re-button.re-separator {
+        display: none;
+    }
+
+    /*
+     https://github.com/redaxo/redaxo/commit/1f78fbe7160b1e3000c82e22585f940bf0b132ef#diff-43abea98eb04c3cf2636f7465a3a2cc9334db9c441e7b9a8a77164e801fb8787
+     */
+    .redactor-source:focus:not([readonly]) {
+        background-color: #252525;
+    }
 }
 
-.redactor-box.redactor-styles-on .redactor-toolbar {
-    display: flex !important;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    flex-grow: 1;
-    padding: 0 4px;
-    background-color: #fafafa;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.075);
-    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.075) 1.19%, #fafafa 1.19%, #fafafa 50%, rgba(0, 0, 0, 0.075) 50%, rgba(0, 0, 0, 0.075) 51.19%, #fafafa 51.19%, #fafafa 100%);
-    background-size: 84px 84px;
+body.rex-theme-dark {
+    @include _redactor-base-redaxo;
 }
 
-.redactor-toolbar a {
-    margin: 0 4px 0 0;
-    background-color: transparent;
-    box-shadow: none;
-}
-
-.redactor-toolbar a.re-button {
-    margin-top: 4px;
-    margin-bottom: 4px;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-.redactor-toolbar a.re-button.re-separator {
-    display: inline-block;
-    align-self: stretch;
-    width: 1px;
-    min-width: 1px;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding: 0;
-    background-color: rgba(0, 0, 0, 0.075);
-    opacity: 1;
-}
-
-.redactor-air a.re-button.re-separator {
-    display: none;
-}
-
-/*
- https://github.com/redaxo/redaxo/commit/1f78fbe7160b1e3000c82e22585f940bf0b132ef#diff-43abea98eb04c3cf2636f7465a3a2cc9334db9c441e7b9a8a77164e801fb8787
- */
-.redactor-source:focus:not([readonly]) {
-    background-color: #252525;
+@media (prefers-color-scheme: dark) {
+    body.rex-has-theme:not(.rex-theme-light) {
+        @include _redactor-base-redaxo;
+    }
 }
