--- a/scss/_source.scss
+++ b/scss/_source.scss
@@ -1,6 +1,19 @@
-.redactor-source,
-.redactor-source:hover,
-.redactor-source:focus {
-    background-color: #252525;
-    color: #ccc;
+@mixin _redactor-base-source {
+
+    .redactor-source,
+    .redactor-source:hover,
+    .redactor-source:focus {
+        background-color: #252525;
+        color: #ccc;
+    }
+}
+
+body.rex-theme-dark {
+    @include _redactor-base-source;
+}
+
+@media (prefers-color-scheme: dark) {
+    body.rex-has-theme:not(.rex-theme-light) {
+        @include _redactor-base-source;
+    }
 }
