implement dark styles (wip)

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -90,7 +90,7 @@
     }
 
     .redactor-overlay {
-        background-color: $overlay-background-color;
+        //background-color: $overlay-background-color;
     }
 }
 
