--- a/scss/_upload.scss
+++ b/scss/_upload.scss
@@ -1,4 +1,4 @@
-@mixin _redactor-base-upload {
+@mixin _redactor-upload-dark {
 
     .upload-redactor-box {
         border-color: rgba(#007dff, .15);
@@ -27,11 +27,11 @@
 }
 
 body.rex-theme-dark {
-    @include _redactor-base-upload;
+    @include _redactor-upload-dark;
 }
 
 @media (prefers-color-scheme: dark) {
     body.rex-has-theme:not(.rex-theme-light) {
-        @include _redactor-base-upload;
+        @include _redactor-upload-dark;
     }
 }
