--- a/scss/_source.scss
+++ b/scss/_source.scss
@@ -3,8 +3,8 @@
     .redactor-source,
     .redactor-source:hover,
     .redactor-source:focus {
-        background-color: #252525;
-        color: #ccc;
+        background-color: #151c22;
+        color: #7abaec;
     }
 }
 
