update base (wip)

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -11,6 +11,7 @@
     .redactor-focus:focus {
         &.redactor-styles-on {
             border-color: #114b7a !important;
+            background-color: #151c22;
         }
     }
 
