--- a/scss/_toolbar.scss
+++ b/scss/_toolbar.scss
@@ -2,8 +2,8 @@
 
     .redactor-toolbar a,
     .redactor-air a {
-        color: rgba(0, 0, 0, .85);
-        background-color: rgba(255, 255, 255, .97);
+        color: rgba(255, 255, 255, 0.75);
+        background-color: transparent;
     }
 
     .redactor-toolbar,
