--- a/scss/_source.scss
+++ b/scss/_source.scss
@@ -3,7 +3,7 @@
     .redactor-source,
     .redactor-source:hover,
     .redactor-source:focus {
-        background-color: #151c22;
+        background-color: rgba(#1b232c, 0.8);
         color: #7abaec;
     }
 }
