--- a/scss/_statusbar.scss
+++ b/scss/_statusbar.scss
@@ -1,7 +1,7 @@
 @mixin _redactor-statusbar-dark {
 
     .redactor-statusbar {
-        background-color: #1b232c;
+        background-color: #202b35;
 
         & li {
             color: rgba(255, 255, 255, 0.45);
